@startuml

class RemoveBookFromCatalogActivity {
    +execute(GetBookRequest): RemoveBookFromCatalogResponse
}

class removeBookFromCatalog {
}

RemoveBookFromCatalogActivity --> CatalogDao

class SubmitBookForPublishingActivity {
    +execute(SubmitBookForPublishingRequest): SubmitBookForPublishingResponse
}

class RecommendationsServiceClient {
}

class CatalogItemVersion {
    @DynamoDBHashKey bookId: String
    @DynamoDBRangeKey version: int
    inactive: boolean
    author: String
    text: String
    genre: BookGenre
}

class PublishingStatusItem {
    @DynamoDBHashKey publishingRecordId: String
    @DynamoDBRangeKey status: PublishingRecordStatus
    statusMessage: String
    bookId: String
}

class CatalogDao {
    dynamoDBMapper: DynamoDBMapper
}

class PublishingStatusDao {
    dynamoDBMapper: DynamoDBMapper
}

class BookNotFoundException {
}

GetBookActivity o-- CatalogDao
GetBookActivity o-- RecommendationsServiceClient
SubmitBookForPublishingActivity o-- PublishingStatusDao

CatalogItemVersion o-- CatalogDao
PublishingStatusItem o-- PublishingStatusDao
CatalogDao o-- BookNotFoundException

@enduml